--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body>
-    <img src="web-private-policy/ic_darby_icon.png" alt="Darby Bible Icon" class="app-icon">
+    <img src="https://raw.githubusercontent.com/JoashTech/DarbyBible-private-policy/main/ic_darby_icon.png" alt="American Standard Bible Icon" class="app-icon">
     <h1>Privacy Policy for Darby Bible</h1>
     <p><strong>Last Updated: October 03, 2025</strong></p>
     <p>JoshTechApps ("we," "us," or "our") develops Darby Bible ("the App"), a free, ad-supported application providing daily Bible verses, Guidances, prayers, quizzes, highlights, notes taking and customization features. We are committed to protecting your privacy. This Privacy Policy explains how we collect, use, share, and protect your information when you use the App.</p>
